# inteligencja-proj2-twitter-analysis

./: .gitignore  README.md  ideas.md  opis.md  pyproject.toml
cow/: bow.py  process.py
data/: settings.json
scrap/: my_tweet.py  zad3.py
src/preprocess/: preprocess.py
src/scrap/: .env.example  scrap_twitter.py
src/sentiment/: nltk_sentiment.py  sentiment.py
src/topic-modelling/: tm.py
src/topic_modelling/: tm.py
src/words/: bow.py  cow.py  emotions.py  process.py  stopwords.py
